[project]
name = "tau-hub"
version = "0.1.0"
description = "Cross-service agent registry for tau_agent — create, store, and retrieve agents, tools, and skills from a database."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "tinydb>=4.8",
    "tau-ai>=0.1.0",
    "dill>=0.4.1",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.6"]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29"]
all = [
    "tau-hub[mongo]",
    "tau-hub[redis]",
    "tau-hub[postgres]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
